# analytical_mart_github_events

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  start-all.sh  stop-all.sh
airflow/: Dockerfile  docker-compose.yml
airflow/dags/: github_data_pipeline_dag.py
airflow/src/services/: __init__.py
dwh_stack/: docker-compose.yml
dwh_stack/minio/: init_minio_bucket.sh
infra/docker-compose/: docker-compose.dev.yml
infra/docker_compose/: docker-compose.dev.yml
notebooks/: get_github_archive.ipynb  get_github_data.ipynb
src/services/: garchive_client.py  minio_client.py
tests/services/: test_garchive_client.py  test_minio_client.py
